brat/test/golden/error/varnotfound.brat
f :: { Nat -> Nat }
f(x) = g(x)
