brat/test/golden/error/varnotfound.brat.golden
Error in test/golden/error/varnotfound.brat on line 2:
f(x) = g(x)
       ^

  g not found in (value) environment

